// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router component should render 1`] = `
"
<style>
  :host {
    contain: content;
  }
  
  slot {
    display: none;
  }
</style>
<div id=\\"router-outlet\\"></div>
"
`;

exports[`Router component should render a secured node if authenticated 1`] = `
"
<style>
  :host {
    contain: content;
  }
  
  slot {
    display: none;
  }
</style>
<div id=\\"router-outlet\\"><t-test route=\\"/foo\\" secured=\\"true\\"></t-test></div>
"
`;

exports[`Router component should render the current path 1`] = `
"
<style>
  :host {
    contain: content;
  }
  
  slot {
    display: none;
  }
</style>
<div id=\\"router-outlet\\"><t-test route=\\"/foo\\"></t-test></div>
"
`;

exports[`Router component should replace the rendered node 1`] = `
"
<style>
  :host {
    contain: content;
  }
  
  slot {
    display: none;
  }
</style>
<div id=\\"router-outlet\\"><t-test route=\\"/foo\\"></t-test></div>
"
`;

exports[`Router component should replace the rendered node 2`] = `
"
<style>
  :host {
    contain: content;
  }
  
  slot {
    display: none;
  }
</style>
<div id=\\"router-outlet\\"><t-test route=\\"/bar\\"></t-test></div>
"
`;
